<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_welcome"
            android:id="@+id/register_welcome" android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"/>

    <TextView
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:text="@string/fname_text"
            android:id="@+id/fname_text"
            android:layout_below="@+id/register_welcome"
            android:layout_alignParentLeft="true"
            android:textColor="#aa0000"
            android:textSize="15dp"/>
    

    <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:id="@+id/fname_edit"
            android:hint="@string/fname_edit"
            android:textColor="#000000"
            android:layout_alignTop="@+id/fname_text"
            android:layout_alignParentRight="true"
            android:textSize="15dp"/>

    <TextView
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:text="@string/lname_text"
            android:textColor="#000000"
            android:id="@+id/lname_text"
            android:layout_below="@+id/fname_text"
            android:layout_toLeftOf="@+id/register_welcome"
            android:textSize="15dp"/>

    <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textColor="#000000"
            android:id="@+id/lname_edit"
            android:hint="@string/lname_edit"
            android:layout_alignTop="@+id/lname_text"
            android:layout_alignParentRight="true"
            android:textSize="15dp"/>

    <TextView
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:textColor="#000000"
            android:text="@string/email_text_register"
            android:id="@+id/email_text_register"
            android:layout_below="@+id/lname_text"
            android:layout_alignRight="@+id/lname_text"
            android:textSize="15dp"/>

    <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textColor="#000000"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_edit_register"
            android:hint="@string/email_edit_register"
            android:layout_below="@+id/lname_text"
            android:layout_alignParentRight="true"
            android:textSize="15dp"/>

 

    <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pword_edit_register"
            android:hint="@string/pword_edit_register"
            android:layout_alignLeft="@+id/email_edit_register"
            android:layout_below="@+id/email_text_register"
            android:textSize="15dp"/>

    <TextView
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:textColor="#000000"
            android:text="@string/pword_text_register"
            android:id="@+id/textView6"
            android:layout_alignTop="@+id/pword_edit_register"
            android:layout_alignRight="@+id/email_text_register"
            android:textSize="15dp"/>

    <TextView
        android:id="@+id/register_error"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/register_button"
        android:textColor="#000000" />

    <Button
        android:id="@+id/register_button"
        style="@style/AppBaseTheme"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pword_edit_register"
        android:text="@string/register_button"
        android:textColor="#000000"
        android:textSize="13dp" />

    <Button
        android:id="@+id/login_view_button"
        style="@style/AppBaseTheme"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/register_button"
        android:layout_alignBottom="@+id/register_button"
        android:layout_alignParentRight="true"
        android:text="@string/login_view_button"
        android:textColor="#000000"
        android:textSize="13dp" />

</RelativeLayout>
