<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
              
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WelcomeMessage" 
            android:id="@+id/WelcomeMessage" android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"/>

    <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/login_button"
            android:id="@+id/login_button"
            android:textSize="13dp"
            android:textColor="#000000"
            android:layout_alignTop="@+id/register_button"
            android:layout_alignParentRight="true"/>

    <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pword_edit"
            android:hint="@string/pword_edit"
            android:layout_below="@+id/email_edit"
            android:layout_alignLeft="@+id/email_edit"
            android:textSize="15dp"
            android:textColor="#000000"/>

    <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/pword_text"
            android:id="@+id/pword_text"
            android:layout_alignBottom="@+id/pword_edit"
            android:layout_alignRight="@+id/email_text"
            android:textSize="15dp"
            android:textColor="#000000"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/register_button"
        android:textColor="#000000"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_above="@+id/register_button"
        android:layout_marginBottom="30dp"
        android:layout_toLeftOf="@+id/pword_edit"
        android:text="@string/email_text"
        android:textColor="#000000"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/loginErrorMsg"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/email_text"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/loginErrorMsg"
        android:ems="10"
        android:hint="@string/email_edit"
        android:textColor="#000000"
        android:textSize="15dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/loginErrMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_marginTop="53dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
   
</RelativeLayout>

