<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical" >

 
  <TextView
      android:text="@string/question_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
  	  
     
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >


    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/private_button"
      android:text="@string/private_button" />

    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/public_button"
      android:text="@string/public_button" />
    
    
    	
    
    
    

  </LinearLayout>

</LinearLayout>